--- a/index.html
+++ b/index.html
@@ -170,54 +170,54 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact">
-    <div class="container">
-      <h2 class="section-title">Contact Us</h2>
-      <div class="muted" style="margin-bottom:1rem">Call, email, or use the form—our team will respond promptly.</div>
+ <!-- Contact -->
+<section id="contact">
+  <div class="container">
+    <h2 class="section-title">Contact Us</h2>
+    <div class="muted" style="margin-bottom:1rem">Call, email, or use the form—our team will respond promptly.</div>
 
-      <div style="display:grid;grid-template-columns:1.1fr .9fr;gap:1.5rem">
-        <form aria-label="Request a quote" data-contact-form>
-          <label class="full">
-            <span class="muted">Your Name</span>
-            <input aria-label="Your Name" required placeholder="Jane Doe" />
-          </label>
-          <label>
-            <span class="muted">Email</span>
-            <input type="email" aria-label="Email" required placeholder="you@example.com" />
-          </label>
-          <label>
-            <span class="muted">Phone</span>
-            <input type="tel" aria-label="Phone" placeholder="(226) 505-7777" />
-          </label>
-          <label class="full">
-            <span class="muted">Location & Size</span>
-            <input aria-label="Location and size" placeholder="Address or area • Approx. square footage" />
-          </label>
-          <label class="full">
-            <span class="muted">Service Type</span>
-            <input aria-label="Service Type" placeholder="e.g., Post‑construction, Commercial, Deep clean" />
-          </label>
-          <label class="full">
-            <span class="muted">Message</span>
-            <textarea rows="5" aria-label="Message" placeholder="Tell us about your space and preferred dates"></textarea>
-          </label>
-          <div class="full">
-            <button class="btn" type="submit">Request a Quote</button>
-          </div>
-        </form>
+    <div class="contact">
+      <form aria-label="Request a quote" data-contact-form class="contact-form">
+        <label class="full">
+          <span class="muted">Your Name</span>
+          <input aria-label="Your Name" required placeholder="Jane Doe" />
+        </label>
+        <label>
+          <span class="muted">Email</span>
+          <input type="email" aria-label="Email" required placeholder="you@example.com" />
+        </label>
+        <label>
+          <span class="muted">Phone</span>
+          <input type="tel" aria-label="Phone" placeholder="(226) 505-7777" />
+        </label>
+        <label class="full">
+          <span class="muted">Location & Size</span>
+          <input aria-label="Location and size" placeholder="Address or area • Approx. square footage" />
+        </label>
+        <label class="full">
+          <span class="muted">Service Type</span>
+          <input aria-label="Service Type" placeholder="e.g., Post-construction, Commercial, Deep clean" />
+        </label>
+        <label class="full">
+          <span class="muted">Message</span>
+          <textarea rows="5" aria-label="Message" placeholder="Tell us about your space and preferred dates"></textarea>
+        </label>
+        <div class="full">
+          <button class="btn" type="submit">Request a Quote</button>
+        </div>
+      </form>
 
-        <aside aria-label="Business contact information" style="background:#fff;border:1px solid rgba(26,26,46,.08);border-radius:1.25rem;padding:1rem">
-          <h3 style="margin:.25rem 0 .75rem">Pure Elegance Cleaners</h3>
-          <p style="margin:.25rem 0">☎️ <a href="tel:+12265057777">+1 (226) 505‑7777</a></p>
-          <p style="margin:.25rem 0">✉️ <a href="mailto:info@pureelegancecleaners.com">info@pureelegancecleaners.com</a></p>
-          <p style="margin:.25rem 0">🌐 www.pureelegancecleaners.com</p>
-          <hr style="border:none;border-top:1px solid rgba(26,26,46,.1);margin:1rem 0" />
-          <p class="muted" style="font-size:.95rem">Service Area: City & surrounding suburbs. Weekday and weekend appointments available.</p>
-        </aside>
-      </div>
+      <aside class="contact-info" aria-label="Business contact information">
+        <h3 style="margin:.25rem 0 .75rem">Pure Elegance Cleaners</h3>
+        <p style="margin:.25rem 0">☎️ <a href="tel:+12265057777">+1 (226) 505-7777</a></p>
+        <p style="margin:.25rem 0">✉️ <a href="mailto:info@pureelegancecleaners.com">info@pureelegancecleaners.com</a></p>
+        <p style="margin:.25rem 0">🌐 www.pureelegancecleaners.com</p>
+        <hr style="border:none;border-top:1px solid rgba(26,26,46,.1);margin:1rem 0" />
+        <p class="muted" style="font-size:.95rem">Service Area: City & surrounding suburbs. Weekday and weekend appointments available.</p>
+      </aside>
     </div>
-  </section>
+  </div>
+</section>
 
   <footer role="contentinfo">
     <div class="container" style="display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between;padding:1.2rem 0;gap:1rem">
