--- a/index.html
+++ b/index.html
@@ -184,13 +184,15 @@
       <a href="#contact" class="btn" aria-label="Start your quote">Start Your Quote</a>
     </div>
   </section>
-
-  <!-- Booking Form -->
-  <section id="booking">
-    <div class="container">
-      <h2 class="section-title">Book a Cleaning</h2>
-      <p class="muted" style="margin-bottom:1rem">Choose your service and preferred date—we’ll confirm shortly.</p>
-      <form aria-label="Book a cleaning" data-form="booking" class="contact-form">
+  
+<!-- Forms Sections -->
+<!-- Booking Form -->
+<section id="booking">
+  <div class="container">
+    <h2 class="section-title">Book a Cleaning</h2>
+    <p class="muted" style="margin-bottom:1rem">Choose your service and preferred date—we’ll confirm shortly.</p>
+    <form aria-label="Book a cleaning" data-form="booking" class="contact-form">
+      <div class="form-row">
         <label>
           <span class="muted">Full Name</span>
           <input type="text" name="name" required placeholder="Jane Doe" />
@@ -199,6 +201,8 @@
           <span class="muted">Email</span>
           <input type="email" name="email" required placeholder="you@example.com" />
         </label>
+      </div>
+      <div class="form-row">
         <label>
           <span class="muted">Phone</span>
           <input type="tel" name="phone" required placeholder="(226) 505-7777" />
@@ -207,6 +211,107 @@
           <span class="muted">Preferred Date</span>
           <input type="date" name="date" required />
         </label>
+      </div>
+      <label class="full">
+        <span class="muted">Service Type</span>
+        <select name="service" required>
+          <option value="">Select a service</option>
+          <option>Residential Cleaning</option>
+          <option>Commercial Cleaning</option>
+          <option>Move-In / Move-Out</option>
+          <option>Post-Construction</option>
+          <option>Deep Cleaning</option>
+          <option>Specialty</option>
+        </select>
+      </label>
+      <label class="full">
+        <span class="muted">Notes</span>
+        <textarea name="notes" rows="4" placeholder="Any details we should know?"></textarea>
+      </label>
+      <div class="full">
+        <button class="btn" type="submit">Confirm Booking</button>
+      </div>
+    </form>
+  </div>
+</section>
+
+<!-- Quote Form -->
+<section id="quote">
+  <div class="container">
+    <h2 class="section-title">Request a Free Quote</h2>
+    <p class="muted" style="margin-bottom:1rem">Tell us about your space and we’ll send you a fast, no-obligation estimate.</p>
+    <form aria-label="Request a quote" data-form="quote" class="contact-form">
+      <div class="form-row">
+        <label>
+          <span class="muted">Your Name</span>
+          <input type="text" name="name" required placeholder="Jane Doe" />
+        </label>
+        <label>
+          <span class="muted">Email</span>
+          <input type="email" name="email" required placeholder="you@example.com" />
+        </label>
+      </div>
+      <div class="form-row">
+        <label>
+          <span class="muted">Phone</span>
+          <input type="tel" name="phone" placeholder="(226) 505-7777" />
+        </label>
+        <label>
+          <span class="muted">Property Size</span>
+          <input type="text" name="size" placeholder="e.g. 1500 sq. ft, 3 bed / 2 bath" />
+        </label>
+      </div>
+      <label class="full">
+        <span class="muted">Service Type</span>
+        <select name="service" required>
+          <option value="">Select a service</option>
+          <option>Residential Cleaning</option>
+          <option>Commercial Cleaning</option>
+          <option>Move-In / Move-Out</option>
+          <option>Post-Construction</option>
+          <option>Deep Cleaning</option>
+          <option>Specialty</option>
+        </select>
+      </label>
+      <label class="full">
+        <span class="muted">Message</span>
+        <textarea name="message" rows="4" placeholder="Any specific details?"></textarea>
+      </label>
+      <div class="full">
+        <button class="btn" type="submit">Get My Quote</button>
+      </div>
+    </form>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact">
+  <div class="container">
+    <h2 class="section-title">Contact Us</h2>
+    <div class="muted" style="margin-bottom:1rem">Call, email, or use the form—our team will respond promptly.</div>
+
+    <div class="contact">
+      <form aria-label="Contact form" data-form="contact" class="contact-form">
+        <div class="form-row">
+          <label>
+            <span class="muted">Your Name</span>
+            <input name="name" required placeholder="Jane Doe" />
+          </label>
+          <label>
+            <span class="muted">Email</span>
+            <input type="email" name="email" required placeholder="you@example.com" />
+          </label>
+        </div>
+        <div class="form-row">
+          <label>
+            <span class="muted">Phone</span>
+            <input type="tel" name="phone" placeholder="(226) 505-7777" />
+          </label>
+          <label>
+            <span class="muted">Location & Size</span>
+            <input name="location" placeholder="Address or area • Approx. square footage" />
+          </label>
+        </div>
         <label class="full">
           <span class="muted">Service Type</span>
           <select name="service" required>
@@ -220,101 +325,26 @@
           </select>
         </label>
         <label class="full">
-          <span class="muted">Notes</span>
-          <textarea name="notes" rows="4" placeholder="Any details we should know?"></textarea>
-        </label>
-        <div class="full">
-          <button class="btn" type="submit">Confirm Booking</button>
-        </div>
-      </form>
-    </div>
-  </section>
-
-  <!-- Quote Form -->
-  <section id="quote">
-    <div class="container">
-      <h2 class="section-title">Request a Free Quote</h2>
-      <p class="muted" style="margin-bottom:1rem">Tell us about your space and we’ll send you a fast, no-obligation estimate.</p>
-      <form aria-label="Request a quote" data-form="quote" class="contact-form">
-        <label>
-          <span class="muted">Your Name</span>
-          <input type="text" name="name" required placeholder="Jane Doe" />
-        </label>
-        <label>
-          <span class="muted">Email</span>
-          <input type="email" name="email" required placeholder="you@example.com" />
-        </label>
-        <label>
-          <span class="muted">Phone</span>
-          <input type="tel" name="phone" placeholder="(226) 505-7777" />
-        </label>
-        <label class="full">
-          <span class="muted">Property Size</span>
-          <input type="text" name="size" placeholder="e.g. 1500 sq. ft, 3 bed / 2 bath" />
-        </label>
-        <label class="full">
-          <span class="muted">Service Type</span>
-          <input type="text" name="service" placeholder="Post-construction, Deep Clean, etc." />
-        </label>
-        <label class="full">
           <span class="muted">Message</span>
-          <textarea name="message" rows="4" placeholder="Any specific details?"></textarea>
+          <textarea name="message" rows="5" placeholder="Tell us about your space and preferred dates"></textarea>
         </label>
         <div class="full">
-          <button class="btn" type="submit">Get My Quote</button>
+          <button class="btn" type="submit">Request a Quote</button>
         </div>
       </form>
+
+      <aside class="contact-info" aria-label="Business contact information">
+        <h3 style="margin:.25rem 0 .75rem">Pure Elegance Cleaners</h3>
+        <p style="margin:.25rem 0">☎️ <a href="tel:+12265057777">+1 (226) 505-7777</a></p>
+        <p style="margin:.25rem 0">✉️ <a href="mailto:info@pureelegancecleaners.com">info@pureelegancecleaners.com</a></p>
+        <p style="margin:.25rem 0">🌐 www.pureelegancecleaners.com</p>
+        <hr style="border:none;border-top:1px solid rgba(26,26,46,.1);margin:1rem 0" />
+        <p class="muted" style="font-size:.95rem">Service Area: City & surrounding suburbs. Weekday and weekend appointments available.</p>
+      </aside>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Contact -->
-  <section id="contact">
-    <div class="container">
-      <h2 class="section-title">Contact Us</h2>
-      <div class="muted" style="margin-bottom:1rem">Call, email, or use the form—our team will respond promptly.</div>
-
-      <div class="contact">
-        <form aria-label="Request a quote" data-form="contact" class="contact-form">
-          <label class="full">
-            <span class="muted">Your Name</span>
-            <input name="name" required placeholder="Jane Doe" />
-          </label>
-          <label>
-            <span class="muted">Email</span>
-            <input type="email" name="email" required placeholder="you@example.com" />
-          </label>
-          <label>
-            <span class="muted">Phone</span>
-            <input type="tel" name="phone" placeholder="(226) 505-7777" />
-          </label>
-          <label class="full">
-            <span class="muted">Location & Size</span>
-            <input name="location" placeholder="Address or area • Approx. square footage" />
-          </label>
-          <label class="full">
-            <span class="muted">Service Type</span>
-            <input name="service" placeholder="e.g., Post-construction, Commercial, Deep clean" />
-          </label>
-          <label class="full">
-            <span class="muted">Message</span>
-            <textarea name="message" rows="5" placeholder="Tell us about your space and preferred dates"></textarea>
-          </label>
-          <div class="full">
-            <button class="btn" type="submit">Request a Quote</button>
-          </div>
-        </form>
-
-        <aside class="contact-info" aria-label="Business contact information">
-          <h3 style="margin:.25rem 0 .75rem">Pure Elegance Cleaners</h3>
-          <p style="margin:.25rem 0">☎️ <a href="tel:+12265057777">+1 (226) 505-7777</a></p>
-          <p style="margin:.25rem 0">✉️ <a href="mailto:info@pureelegancecleaners.com">info@pureelegancecleaners.com</a></p>
-          <p style="margin:.25rem 0">🌐 www.pureelegancecleaners.com</p>
-          <hr style="border:none;border-top:1px solid rgba(26,26,46,.1);margin:1rem 0" />
-          <p class="muted" style="font-size:.95rem">Service Area: City & surrounding suburbs. Weekday and weekend appointments available.</p>
-        </aside>
-      </div>
-    </div>
-  </section>
 
   <!-- Footer -->
   <footer role="contentinfo">
