--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   
 <!-- Forms Sections -->
 <!-- Booking Form -->
-<section id="booking">
+<section id="booking" class="hidden">
   <div class="container">
     <h2 class="section-title">Book a Cleaning</h2>
     <p class="muted" style="margin-bottom:1rem">Choose your service and preferred date—we’ll confirm shortly.</p>
@@ -236,7 +236,7 @@
 </section>
 
 <!-- Quote Form -->
-<section id="quote">
+<section id="quote"  class="hidden">
   <div class="container">
     <h2 class="section-title">Request a Free Quote</h2>
     <p class="muted" style="margin-bottom:1rem">Tell us about your space and we’ll send you a fast, no-obligation estimate.</p>
