--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
           <li style="margin:.5rem 0">• Standard cleaning from <strong>$0.25 / sq. ft</strong></li>
           <li style="margin:.5rem 0">• Post‑construction & deep cleaning quoted on‑site</li>
           <li style="margin:.5rem 0">• Volume & recurring discounts available</li>
+           <li style="margin:.5rem 0">• Specialty Services: $50–$150</li>
         </ul>
         <div style="margin-top:1rem" class="rate">
           <div>
@@ -165,6 +166,9 @@
       </div>
     </div>
   </section>
+
+
+  
 
   <!-- About -->
   <section id="about">
@@ -329,7 +333,7 @@
           <textarea name="message" rows="5" placeholder="Tell us about your space and preferred dates"></textarea>
         </label>
         <div class="full">
-          <button class="btn" type="submit">Request a Quote</button>
+          <button  class="btn" type="submit">Request a Quote</button>
         </div>
       </form>
 
